# Scalar_Hackathon_AI_ticket_sports_env

./: README.md
SupportDeskEnv/: Dockerfile  README.md  app.py  final_inference_output.txt  inference.py  openenv.yaml  pyproject.toml  requirements.txt  score_results.txt  test_result.txt  validate_phase2.py
SupportDeskEnv/envs/: graders.py  knowledge_base.py  models.py  support_env.py  tasks.py
SupportDeskEnv/server/: __init__.py  app.py
SupportDeskEnv/tests/: test_env.py
